vix/tests/checker-corpus/reject/string-is-not-path.vix
fn open(p: Path) -> Path {
    p
}

fn main() -> Path {
    open("src/main.c")
}
